# ts-agent

./: .env.example  Dockerfile  LICENSE  entrypoint.sh  pyproject.toml
.github/workflows/: docker-ci.yml
agent/: __main__.py  app.py  settings.py
